--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
 </head>
 <body>
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -17,17 +18,41 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="/static/img/circaNew.png" class="topLogo"></a>
+      <a class="navbar-brand" href="#">CIRCA</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('index') }}">About<span class="sr-only">(current)</span></a></li>
         <li><a href="{{ url_for('form') }}">My Site</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#" data-toggle="modal" data-target="#myModal">Support</a></li>
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+             <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel"><img src="../static/img/circaNew.png" class="topLogo"> by Linkology</h4>
+                </div>
+                <div class="modal-body">
+                    This application was designed for specific use by TMMK. If you are having any issues please do not
+                    hesitate to call <b>Linkology at 1-859-491-7711</b>. If you need technical assistance you can email
+                    the author of this application at crussell@linkologyusa.com.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+             </div>
+            </div>
+          </div>
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
 <div class="container">
     <div class="row">
         <div class="page-header">
@@ -44,5 +69,7 @@
     </div>
 </div>
 {% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
