Added whole building reboot and dismissable pass/fail alerts

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,75 @@
     </div>
 </div>
 {% endblock %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script>
+$('#b100All').click(function () {
+    $('ul.b100 li input').prop('checked', this.checked);
+});
+$('#b200All').click(function () {
+    $('ul.b200 li input').prop('checked', this.checked);
+});
+$('#b201nAll').click(function () {
+    $('ul.b201n li input').prop('checked', this.checked);
+});
+$('#b201sAll').click(function () {
+    $('ul.b201s li input').prop('checked', this.checked);
+});
+$('#b400All').click(function () {
+    $('ul.b400 li input').prop('checked', this.checked);
+});
+$('#b400aAll').click(function () {
+    $('ul.b400a li input').prop('checked', this.checked);
+});
+$('#b501All').click(function () {
+    $('ul.b501 li input').prop('checked', this.checked);
+});
+$('#b601All').click(function () {
+    $('ul.b601 li input').prop('checked', this.checked);
+});
+$('#b602All').click(function () {
+    $('ul.b602 li input').prop('checked', this.checked);
+});
+$('#b603All').click(function () {
+    $('ul.b603 li input').prop('checked', this.checked);
+});
+$('#b606All').click(function () {
+    $('ul.b606 li input').prop('checked', this.checked);
+});
+$('#b608All').click(function () {
+    $('ul.b608 li input').prop('checked', this.checked);
+});
+$('#b611All').click(function () {
+    $('ul.b611 li input').prop('checked', this.checked);
+});
+$('#b800All').click(function () {
+    $('ul.b800 li input').prop('checked', this.checked);
+});
+$('#b2000sAll').click(function () {
+    $('ul.b2000s li input').prop('checked', this.checked);
+});
+$('#b2000nAll').click(function () {
+    $('ul.b2000n li input').prop('checked', this.checked);
+});
+$('#b2000aAll').click(function () {
+    $('ul.b2000a li input').prop('checked', this.checked);
+});
+$('#b3000asAll').click(function () {
+    $('ul.b3000as li input').prop('checked', this.checked);
+});
+$('#b3000anAll').click(function () {
+    $('ul.b3000an li input').prop('checked', this.checked);
+});
+$('#bccAll').click(function () {
+    $('ul.bcc li input').prop('checked', this.checked);
+});
+$('#btmsAll').click(function () {
+    $('ul.btms li input').prop('checked', this.checked);
+});
+$('#bfitAll').click(function () {
+    $('ul.bfit li input').prop('checked', this.checked);
+});
+</script>
 </body>
 </html>
