--- a/templates/form.html
+++ b/templates/form.html
@@ -8,6 +8,9 @@
           {% with messages = get_flashed_messages(category_filter=["message"]) %}
           {% if messages %}
             <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
               <ul>
                 {%- for message in messages %}
                   <li>{{ message }}</li>
@@ -22,6 +25,9 @@
           {% with errors = get_flashed_messages(category_filter=["error"]) %}
           {% if errors %}
             <div class="alert alert-danger">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
               <ul>
                 {%- for msg in errors %}
                   <li>{{ msg }}</li>
@@ -33,8 +39,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
-            <form method="POST" action="{{ url_for('form') }}">
+        <form method="POST" action="{{ url_for('form') }}">
+            <div class="col-md-4">
                 {{ form.csrf_token }}
                 <h3>Building 100</h3>
                 <input type="checkbox" id="b100All"/>Select Whole Building
@@ -64,8 +70,8 @@
                 <input type="checkbox" id="b501All"/>Select Whole Building
                 {{ form.B501_Enc_Dec(class="b501") }}
                 {{ form.B501_Net(class="b501") }}
-        </div>
-        <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
                 <h3>Building 601</h3>
                 <input type="checkbox" id="b601All"/>Select Whole Building
                 {{ form.B601_Enc_Dec(class="b601") }}
@@ -82,7 +88,7 @@
                 <input type="checkbox" id="b606All"/>Select Whole Building
                 {{ form.B606_Enc_Dec(class="b606") }}
                 {{ form.B606_Net(class="b606") }}
-             <h3>Building 608</h3>
+                <h3>Building 608</h3>
                 <input type="checkbox" id="b608All"/>Select Whole Building
                 {{ form.B608_Enc_Dec(class="b608") }}
                 {{ form.B608_Net(class="b608") }}
@@ -94,12 +100,12 @@
                 <input type="checkbox" id="b800All"/>Select Whole Building
                 {{ form.B800_Enc_Dec(class="b800") }}
                 {{ form.B800_Net(class="b800") }}
-            <h3>Building 2000 South</h3>
+                <h3>Building 2000 South</h3>
                 <input type="checkbox" id="b2000sAll"/>Select Whole Building
                 {{ form.B2000S_Enc_Dec(class="b2000s") }}
                 {{ form.B2000S_Net(class="b2000s") }}
-        </div>
-        <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
                 <h3>Building 2000 North</h3>
                 <input type="checkbox" id="b2000nAll"/>Select Whole Building
                 {{ form.B2000N_Enc_Dec(class="b2000n") }}
@@ -129,9 +135,8 @@
                 {{ form.Fit_Enc_Dec(class="bfit") }}
                 {{ form.Fit_Net(class="bfit") }}
             <button type="submit" class="btn btn-success btn-lg btn-block">Reboot</button>
-        </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %}
