--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{{ url_for('index') }}">About<span class="sr-only">(current)</span></a></li>
         <li><a href="{{ url_for('form') }}">My Site</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" data-toggle="modal" data-target="#myModal">Support</a></li>
-          <!-- Modal -->
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <li><a href="#" data-toggle="modal" data-target="#supportModal">Support</a></li>
+          <!--  Support Modal -->
+          <div class="modal fade" id="supportModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
              <div class="modal-content">
                 <div class="modal-header">
@@ -41,6 +40,35 @@
                     This application was designed for specific use by TMMK. If you are having any issues please do not
                     hesitate to call <b>Linkology at 1-859-491-7711</b>. If you need technical assistance you can email
                     the author of this application at crussell@linkologyusa.com.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+             </div>
+            </div>
+          </div>
+          <li><a href="#" data-toggle="modal" data-target="#aboutModal">About</a></li>
+          <!-- About Modal -->
+          <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+             <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel"><img src="../static/img/circaNew.png" class="topLogo"> by Linkology</h4>
+                </div>
+                <div class="modal-body">
+                    <h2>Welcome to Circa</h2>
+            <p>Circa is a code name for this web app. It's easier than saying "the <b>c</b>entralized <b>i</b>p-based
+                <b>r</b>eboot <b>c</b>enter <b>a</b>pplication". Circa makes rebooting multiple devices easy and saves
+                time. Simply select the building or individual devices that need to be reset, click the <i>reboot</i> button
+                and let Circa do the rest for you.</p>
+        <h2>How It Works</h2>
+        <p>Circa is built using Flask which is  microframework for Python that allows for the rapid development of
+        web applications. Flask serves up a form that is hard coded with the ip information of your devices. When selected
+        the form sends a POST request to the url that runs a factory cgi script that safely reboots the device. Once this POST
+        request returns if the function exited successfully or not it will return the form with reports at the top.
+        One report will be in green, being the list of successfully rebooted devices. The other will be in red as they
+            have failed for one reason or another.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -64,8 +92,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <h1>Test</h1>
-            <p>This is a test.</p>
+
     </div>
 </div>
 {% endblock %}
